Fix code overflowing the codebox

--- a/web/css/styles.css
+++ b/web/css/styles.css
@@ -23,6 +23,7 @@ input, textarea, button {
     width: 100%;
     height: 40%;
     padding-right: 1.5em;
+    overflow-y: auto;
 }
 
 #keypad {
